# Weather-Station-Embedded-Rust-IoT-and-OTA-Firmware-Update

./: Cargo.toml  README.md  build-ota.sh  flash.sh
gnuplot/: convert.py  plot_latensi.gnu  timestamps (10 okt).csv  timestamps (11 okt).csv  timestamps (4 okt).csv  timestamps (6 okt).csv  timestamps (7 okt).csv  timestamps (9 okt).csv
src/: main.rs
